tests/baselines/reference/errorLocationForInterfaceExtension.errors.txt
tests/cases/compiler/errorLocationForInterfaceExtension.ts(3,21): error TS2840: An interface cannot extend a primitive type like 'string'; an interface can only extend named types and classes


==== tests/cases/compiler/errorLocationForInterfaceExtension.ts (1 errors) ====
    var n = '';
    
    interface x extends string { }
                        ~~~~~~
!!! error TS2840: An interface cannot extend a primitive type like 'string'; an interface can only extend named types and classes
    